Object disappear (eventually crash) while changing multires subdivision level #47637

Closed
opened 2016-03-01 09:46:48 +01:00 by Tomas Dostal · 11 comments

System Information
WIN10
32GB RAM
NVIDIA GFORCE GTX980

Blender Version
Broken: (example: 2.76b f337fea, 2.77 RC too)

Short description of error

Object (mesh) disappear, eventually Blender crashes, while switching multires subdivision level (PgDn PgUp). All objects in sculpt mode. All objects have multires modifier. Sometimes when you switch among objects by right click on them Blender crashes.

Exact steps for others to reproduce the error

  • In attached BLEND file use PgUp and PgDn to change multires subdivision level.
  • If it is ok, then ensure all objects are in sculpt mode and switch between them and repeat step 1

sculpt.blend

**System Information** WIN10 32GB RAM NVIDIA GFORCE GTX980 **Blender Version** Broken: (example: 2.76b f337fea, 2.77 RC too) **Short description of error** Object (mesh) disappear, eventually Blender crashes, while switching multires subdivision level (PgDn PgUp). All objects in sculpt mode. All objects have multires modifier. Sometimes when you switch among objects by right click on them Blender crashes. **Exact steps for others to reproduce the error** - In attached BLEND file use PgUp and PgDn to change multires subdivision level. - If it is ok, then ensure all objects are in sculpt mode and switch between them and repeat step 1 [sculpt.blend](https://archive.blender.org/developer/F286492/sculpt.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TomasDostal

Added subscriber: @TomasDostal

Added subscriber: @Sergey

Added subscriber: @Sergey

Can reproduce the issue, not sure what's causing it. Maybe running out of GPU resources.. Needs more investigation.

Can reproduce the issue, not sure what's causing it. Maybe running out of GPU resources.. Needs more investigation.

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Just in case: I have encountered the same bug as well both in 2.76 and 2.77 and in most simple case it looks like this:

  1. Create an empty scene and add two planes
  2. Add multires to both planes. Set multires of the first plane to 1 and multires of the second plane to 2 ( now we have two objects with different multires levels)
  3. Switch first plane to Sculpt mode
  4. Select second plane through Outliner window and switch to Sculpt mode as well (now we have two objects with Sculpt mode activated and different levels of multires)
  5. Try selecting the first plane through Outliner and Blender will crash

I have tried the same steps with two cubes and when I'm selecting one of the cubes it gets corrupted; after selecting back and fourth between two cubes through Outliner window Blender crashed.
If you add multires to both objects but leave one multires on 0, crash doesn't seem to happen, but when you add a level and if this level is different from the level of another object, switching level in Preview field causes a crash.

Hope this will help.

Just in case: I have encountered the same bug as well both in 2.76 and 2.77 and in most simple case it looks like this: 1. Create an empty scene and add two planes 2. Add multires to both planes. Set multires of the first plane to 1 and multires of the second plane to 2 ( now we have two objects with different multires levels) 3. Switch first plane to Sculpt mode 4. Select second plane through Outliner window and switch to Sculpt mode as well (now we have two objects with Sculpt mode activated and different levels of multires) 5. Try selecting the first plane through Outliner and Blender will crash I have tried the same steps with two cubes and when I'm selecting one of the cubes it gets corrupted; after selecting back and fourth between two cubes through Outliner window Blender crashed. If you add multires to both objects but leave one multires on 0, crash doesn't seem to happen, but when you add a level and if this level is different from the level of another object, switching level in Preview field causes a crash. Hope this will help.
Author

Alex: I can confirm this. In my case I simply select other objects by RMB.

Alex: I can confirm this. In my case I simply select other objects by RMB.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-06-02 15:58:58 +02:00

Found the culprit (static global gpu buffer used for 'grid' pbvh - was a nice hunt…), fix incoming.

Found the culprit (static global gpu buffer used for 'grid' pbvh - was a nice hunt…), fix incoming.

This issue was referenced by 68d1348ca2

This issue was referenced by 68d1348ca2f4ae7fcd6eff5b7bdbd84d75988ae8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
5 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#47637
No description provided.